# TinyRaster

./: CMakeLists.txt  Color.h  Framebuffer.cpp  Framebuffer.h  Math.h  README.md  Vertex.h  main.cpp
